--- a/Cadena/src/main/resources/log4j.properties
+++ b/Cadena/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@
 log4j.rootLogger=INFO, stdout
 
 # Direct log messages to stdout
-log4j.appender.stdout.File=D:\\Test\\logigngTest.log
+log4j.appender.stdout.File=D:\\Test\\logigngTestT1.log
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
